# vanty-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  makefile  pyproject.toml  requirements.txt
.workflows/: ci.yaml
cli/: _client.py  auth.py  cli.py  config.py  dev.py  ops.py  project.py  schema.py
cli/tests/: test_auth.py  test_client.py
docs/: auth.md  config.md  dev.md  dev_module_usage.md  overview.md  scaffold.md  scaffold_module_usage.md  tutorials.md
tests/: test_auth.py  test_client.py  test_config.py
vanty/: config.py  dev.py  schema.py
