[tool.poetry]
name = "vanty-cli"
version = "0.1.0"
description = "vanty-cli for install and managing applications from advantch.com"
authors = ["Themba <themba@advantch.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "vanty_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
honcho = "^1.1.0"
django-environ = "^0.10.0"
sh = "^2.0.4"
toml = "^0.10.2"
httpx = "^0.24.1"
pydantic = "^1.10.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
respx = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
